# DiscreteProbability

./: LICENSE  README.md  pyproject.toml
discrete-probability/: Props.py
src/discrete_probability/: Dice.py  Probs.py  __init__.py
src/scripts/: scripts.py
test/: test_dice.py
