[project]
name = "discrete_probability"
version = "0.1.1"
description = "Describe discrete probability distributions and track their behaviour over functions."
authors = [{ name = "Jonathan Sigrist", email = "github@dfb159.anonaddy.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gmpy2 (>=2.2.1,<3.0.0)",
    "gmpy2-stubs (>=2.2.1.5,<3.0.0.0)"
]

[tool.poetry]
packages = [
    { include = "discrete_probability", from = "src" }
]
repository = "https://github.com/dfb159/discrete_probability"

[tool.poetry.scripts]
dev = 'scripts.scripts:dev'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
